objects/maps__AdvRouteOffDays__c.object
<CustomObject>
    <description>This holds the working hours for users</description>
    <fields>
        <fullName>maps__DaysOfWeek__c</fullName>
        <description>These are the days of the week that the off days are valid for</description>
        <label>Day(s) of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to determine the default settings</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndDate__c</fullName>
        <description>This is the end date for a off days exception</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__EndTime__c</fullName>
        <description>This is the end time of the working hours</description>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__LunchBreakEnd__c</fullName>
        <description>This is the end of the lunch break</description>
        <label>Lunch Break End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__LunchBreakStart__c</fullName>
        <description>This is the start of the lunch break</description>
        <label>Lunch Break Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__StartDate__c</fullName>
        <description>This is the start date for a off days exception</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__StartTime__c</fullName>
        <description>This is the start time of the off days</description>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <description>Determines how the off days will be used</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Non-Working Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdvRouteOffDays</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Advanced Route Off Days</label>
    <nameField>
        <label>Maps Advanced Route Off Days Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Off Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>